[gd_scene load_steps=2 format=3 uid="uid://baurs0gde82o3"]

[ext_resource type="Script" uid="uid://bin0ml5aps6k4" path="res://power_up_choice.gd" id="1_72agh"]

[node name="PowerUpChoice" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_72agh")

[node name="BoxContainer" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 419.0
offset_top = 208.0
offset_right = 475.0
offset_bottom = 310.0

[node name="SpeedButton" type="Button" parent="BoxContainer"]
layout_mode = 2
text = "Speed"

[node name="BoxContainer3" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 610.0
offset_top = 208.0
offset_right = 742.0
offset_bottom = 310.0

[node name="AdditionalJumpButton" type="Button" parent="BoxContainer3"]
layout_mode = 2
text = "Additional Jump"

[node name="BoxContainer2" type="BoxContainer" parent="."]
layout_mode = 0
offset_left = 486.0
offset_top = 208.0
offset_right = 616.0
offset_bottom = 310.0

[node name="ChargeHeightButton" type="Button" parent="BoxContainer2"]
layout_mode = 2
text = "Charge Height"

[connection signal="pressed" from="BoxContainer/SpeedButton" to="." method="_on_speed_button_pressed"]
[connection signal="pressed" from="BoxContainer3/AdditionalJumpButton" to="." method="_on_additional_jump_button_pressed"]
[connection signal="pressed" from="BoxContainer2/ChargeHeightButton" to="." method="_on_charge_height_button_pressed"]
